looking finished, cleaned up code a little bit

--- a/Sphere (private beta) - Simplifying Life.htm
+++ b/Sphere (private beta) - Simplifying Life.htm
@@ -32,7 +32,7 @@
 						<div class="modal-content">
 							<div class="modal-header">
 								<span class="close">&times;</span>
-								<h4>Enter your event start and end time. The calendar will round to the nearest half hour</h4>
+								<h4>Enter your event start and end time. You can only select on the half-hour</h4>
 							</div>
 							<div class="modal-body">
 								<form id="mobile-form">
